[gd_scene load_steps=5 format=2]

[ext_resource path="res://Triggers/Turret.gd" type="Script" id=1]

[sub_resource type="SphereMesh" id=1]

[sub_resource type="SpatialMaterial" id=2]
flags_transparent = true
albedo_color = Color( 0.952941, 0.027451, 0.027451, 0.32549 )

[sub_resource type="SphereShape" id=3]

[node name="Turret" type="Area"]
collision_mask = 2
script = ExtResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0 )
shape = SubResource( 3 )

[node name="TurretBase" type="CSGSphere" parent="."]
use_collision = true

[node name="Barrel" type="CSGCylinder" parent="TurretBase"]
transform = Transform( 0.5, 0, 0, 0, -4.37114e-08, -0.5, 0, 1, -2.18557e-08, 0, 0.358432, -0.890807 )
radius = 0.674941
height = 1.01021

[node name="Position3D" type="Position3D" parent="TurretBase/Barrel"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.14318, -1.82474 )

[node name="RayCast" type="RayCast" parent="TurretBase/Barrel/Position3D"]
transform = Transform( 1, 0, 1.50996e-07, 0, 5, 0, -1.50996e-07, 0, 1, 0, -0.0143515, 0 )

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
[connection signal="body_entered" from="." to="." method="_on_Turret_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Turret_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
